# smart-dynamic-hedge-project

./: .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  LEGAL_NOTICE.md  LICENSE  Makefile  NOTICE  README.md  SHA256SUMS.txt  TEST_RESULTS.txt  config.alpaca-readonly.example.json  config.example.json  mcp-config.example.json  pyproject.toml  requirements.txt  smart-dynamic-hedge-project.code-workspace
cpp/: smart_dynamic_hedge.cpp
data/: evidence.example.json
docs/: ARCHITECTURE.md  REQUEST_GUARD_PORT.md  ROADMAP.md  THREAT_MODEL.md
python/smart_hedge/: __init__.py  cli.py  config.py  core_bridge.py  dashboard.py  data.py  engine.py  features.py  mcp_server.py  model_advisor.py  models.py  policy.py  store.py
requirements/: HLR.md  LLR.md  README.md  TRACEABILITY.md
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/crates/smart-hedge-audit/: Cargo.toml
rust/crates/smart-hedge-audit/src/: lib.rs
rust/crates/smart-hedge-backtest/: Cargo.toml
rust/crates/smart-hedge-backtest/src/: lib.rs
rust/crates/smart-hedge-cli/: Cargo.toml
rust/crates/smart-hedge-cli/src/: args.rs  commands.rs  error.rs  main.rs
rust/crates/smart-hedge-cli/tests/: cli_integration.rs
rust/crates/smart-hedge-config/: Cargo.toml
rust/crates/smart-hedge-config/src/: defaults.rs  env_overrides.rs  error.rs  lib.rs  loader.rs  merge.rs  paths.rs  strike_spec.rs  types.rs
rust/crates/smart-hedge-core-bridge/: Cargo.toml
rust/crates/smart-hedge-core-bridge/src/: build.rs  error.rs  lib.rs  paths.rs  run.rs  run_with_timeout.rs  which.rs
rust/crates/smart-hedge-dashboard/: Cargo.toml
rust/crates/smart-hedge-dashboard/src/: cache.rs  html.rs  http.rs  integration_tests.rs  lib.rs  routes.rs  server.rs
rust/crates/smart-hedge-data/: Cargo.toml
rust/crates/smart-hedge-data/src/: alpaca.rs  error.rs  evidence_file.rs  fred.rs  http_util.rs  lib.rs  market_hours.rs  mock_http_test_support.rs  provider.rs  rng.rs  rss.rs  rss_xml.rs  synthetic.rs
rust/crates/smart-hedge-engine/: Cargo.toml
rust/crates/smart-hedge-engine/src/: chaos_tests.rs  contract.rs  engine.rs  error.rs  factory.rs  hashing.rs  integration_tests.rs  lib.rs
rust/crates/smart-hedge-features/: Cargo.toml
rust/crates/smart-hedge-features/src/: build.rs  evidence_summary.rs  integration_tests.rs  lib.rs  returns.rs  stats.rs
rust/crates/smart-hedge-guard-client/: Cargo.toml
rust/crates/smart-hedge-guard-client/src/: lib.rs
rust/crates/smart-hedge-intelligence-client/: Cargo.toml
rust/crates/smart-hedge-intelligence-client/src/: lib.rs
rust/crates/smart-hedge-mcp/: Cargo.toml
rust/crates/smart-hedge-mcp-client/: Cargo.toml
rust/crates/smart-hedge-mcp-client/src/: lib.rs
rust/crates/smart-hedge-mcp/src/: lib.rs  protocol.rs  server.rs  tools.rs
rust/crates/smart-hedge-model-advisor/: Cargo.toml
rust/crates/smart-hedge-model-advisor/src/: advisor.rs  error.rs  heuristic.rs  http_util.rs  lib.rs  mock_http_test_support.rs  model_uri.rs  openai.rs  router.rs  schema.rs
rust/crates/smart-hedge-models/: Cargo.toml
rust/crates/smart-hedge-models/src/: assessment.rs  bar.rs  core_response.rs  evidence.rs  features.rs  lib.rs  policy_decision.rs  quote.rs  recommendation.rs  sha256.rs  snapshot.rs  time_util.rs  unique_id.rs
rust/crates/smart-hedge-policy/: Cargo.toml
rust/crates/smart-hedge-policy/src/: evaluate.rs  lib.rs  parity_tests.rs  rounding.rs
rust/crates/smart-hedge-portfolio/: Cargo.toml
rust/crates/smart-hedge-portfolio/src/: lib.rs
rust/crates/smart-hedge-store/: Cargo.toml
rust/crates/smart-hedge-store/src/: canonical.rs  error.rs  field_access.rs  integration_tests.rs  lib.rs  store.rs
scripts/: run_demo.sh
tests/: test_engine.py  test_model_schema.py  test_policy.py
