cmake_minimum_required(VERSION 3.16)
project(smart_dynamic_hedge LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
add_executable(smart_dynamic_hedge cpp/smart_dynamic_hedge.cpp)
if(MSVC)
  target_compile_options(smart_dynamic_hedge PRIVATE /W4 /permissive-)
else()
  target_compile_options(smart_dynamic_hedge PRIVATE -Wall -Wextra -Wpedantic)
endif()
enable_testing()
add_test(NAME core_self_test COMMAND smart_dynamic_hedge --self-test)
