[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-dynamic-hedge"
version = "0.2.0"
description = "Paper-only, auditable dynamic-hedging research lab"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Rich and OpenAI"}]
dependencies = []

[project.optional-dependencies]
dashboard = ["fastapi>=0.115", "uvicorn[standard]>=0.34"]
model = ["openai>=1.66"]
mcp = ["mcp>=1.6"]
all = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "openai>=1.66",
  "mcp>=1.6"
]

[project.scripts]
smart-hedge = "smart_hedge.cli:main"
smart-hedge-mcp = "smart_hedge.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
