[workspace]
resolver = "2"
members = [
  "crates/smart-hedge-models",
  "crates/smart-hedge-config",
  "crates/smart-hedge-policy",
  "crates/smart-hedge-core-bridge",
  "crates/smart-hedge-features",
  "crates/smart-hedge-store",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

[workspace.dependencies]
# Same policy as market-intelligence-mcp and trade-guard-mcp: minimize
# third-party dependencies. serde/serde_json are kept because they are the
# cross-repo/cross-language wire format and hand-rolling JSON parsing is a
# worse security trade-off than using the ecosystem-standard crate.
# Timestamps, UUIDs, and error types are hand-rolled rather than pulling in
# `time`/`uuid`/`thiserror` — see smart-hedge-models::time_util.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Deliberate, documented exception to "hand-roll instead of depend": the
# SQLite file format (WAL, B-tree pages, freelist management, journal
# recovery) is exactly the kind of complex, correctness-critical format
# that is a *worse* security/reliability trade-off to reimplement than to
# depend on — the same reasoning that keeps serde_json instead of a
# hand-rolled JSON parser, applied to a much larger surface. `bundled`
# compiles SQLite from source rather than linking whatever version
# happens to be on the host, which matters for the multiplatform
# requirement (no assumption about a system SQLite being present/current).
rusqlite = { version = "0.32", features = ["bundled"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
