[workspace]
resolver = "2"
members = [
  "crates/smart-hedge-models",
  "crates/smart-hedge-config",
  "crates/smart-hedge-policy",
  "crates/smart-hedge-core-bridge",
  "crates/smart-hedge-features",
  "crates/smart-hedge-store",
  "crates/smart-hedge-model-advisor",
  "crates/smart-hedge-data",
  "crates/smart-hedge-engine",
  "crates/smart-hedge-cli",
  "crates/smart-hedge-dashboard",
  "crates/smart-hedge-mcp",
  "crates/smart-hedge-audit",
  "crates/smart-hedge-mcp-client",
  "crates/smart-hedge-intelligence-client",
  "crates/smart-hedge-guard-client",
  "crates/smart-hedge-portfolio",
  "crates/smart-hedge-backtest",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
publish = false

[workspace.dependencies]
# Same policy as market-intelligence-mcp and trade-guard-mcp: minimize
# third-party dependencies. serde/serde_json are kept because they are the
# cross-repo/cross-language wire format and hand-rolling JSON parsing is a
# worse security trade-off than using the ecosystem-standard crate.
# Timestamps, UUIDs, and error types are hand-rolled rather than pulling in
# `time`/`uuid`/`thiserror` — see smart-hedge-models::time_util.
serde = { version = "1", features = ["derive"] }
# `float_roundtrip`: without it, serde_json's float parser trades exact
# round-tripping for speed, so a stored float like 0.9040000000000001 can
# reparse to a nearby-but-different bit pattern (e.g. 0.904) and reserialize
# to a different string. That silently breaks any hash-after-parse
# integrity check (smart-hedge-store's tamper detection, engine.py's
# canonical_hash/_file_hash equivalents) whenever a payload contains a
# float that isn't already its own shortest round-trip representation —
# found via smart-hedge-cli's self-test integration test failing
# nondeterministically depending on which floats the synthetic provider
# happened to generate.
serde_json = { version = "1", features = ["float_roundtrip"] }
# Deliberate, documented exception to "hand-roll instead of depend": the
# SQLite file format (WAL, B-tree pages, freelist management, journal
# recovery) is exactly the kind of complex, correctness-critical format
# that is a *worse* security/reliability trade-off to reimplement than to
# depend on — the same reasoning that keeps serde_json instead of a
# hand-rolled JSON parser, applied to a much larger surface. `bundled`
# compiles SQLite from source rather than linking whatever version
# happens to be on the host, which matters for the multiplatform
# requirement (no assumption about a system SQLite being present/current).
rusqlite = { version = "0.32", features = ["bundled"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
