[package]
name = "smart_hedge_backtest"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
smart_hedge_config = { path = "../smart-hedge-config" }
smart_hedge_core_bridge = { path = "../smart-hedge-core-bridge" }
smart_hedge_data = { path = "../smart-hedge-data" }
smart_hedge_engine = { path = "../smart-hedge-engine" }
smart_hedge_features = { path = "../smart-hedge-features" }
smart_hedge_model_advisor = { path = "../smart-hedge-model-advisor" }
smart_hedge_models = { path = "../smart-hedge-models" }
smart_hedge_policy = { path = "../smart-hedge-policy" }

[lints]
workspace = true
