[package]
name = "smart_hedge_dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde_json = { workspace = true }
smart_hedge_config = { path = "../smart-hedge-config" }
smart_hedge_engine = { path = "../smart-hedge-engine" }

[lints]
workspace = true
