[package]
name = "smart_hedge_model_advisor"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde_json = { workspace = true }
smart_hedge_models = { path = "../smart-hedge-models" }
smart_hedge_config = { path = "../smart-hedge-config" }

[lints]
workspace = true
