[package]
name = "smart_hedge_store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde_json = { workspace = true }
rusqlite = { workspace = true }
smart_hedge_models = { path = "../smart-hedge-models" }

[lints]
workspace = true
